--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "description": "Backend para um agregador de notícias de Direita com IA",
     "dependencies": {
         "openai": "^4.0.0",
-        "rss-parser": "^3.13.0"
+        "rss-parser": "^3.13.0",
+        "@vercel/kv": "^1.0.1"
     }
 }
